--- a/Application/Application/appsettings.json
+++ b/Application/Application/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=Medical;User Id=postgress;Password=Admin"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
