Validations & UI Changes
-Added validation messages for all fields, but there's a bug with phone number that doesn't show a message.
-UI color changes

--- a/Clinic/Clinic/Web.config
+++ b/Clinic/Clinic/Web.config
@@ -45,7 +45,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ClinicEntities" connectionString="metadata=res://*/Models.Registration.csdl|res://*/Models.Registration.ssdl|res://*/Models.Registration.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-606CHDC\SQLEXPRESS;initial catalog=Clinic;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClinicEntities" connectionString="metadata=res://*/Models.Registration.csdl|res://*/Models.Registration.ssdl|res://*/Models.Registration.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALEX\SQLEXPRESS;initial catalog=Clinic;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
