--- a/Clinic/Clinic/Clinic.csproj
+++ b/Clinic/Clinic/Clinic.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Registration.css" />
+    <Content Include="Content\_Home.css" />
     <Content Include="Global.asax" />
     <Content Include="Models\Registration.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
